more fooling with dzil

--- a/dist.ini
+++ b/dist.ini
@@ -4,11 +4,39 @@ license = Perl_5
 copyright_holder = Stephen R. Scaffidi
 copyright_year   = 2010
 
+[@Git]
+[@Basic]
+;Currently equivalent to:
+;[GatherDir]
+;[PruneCruft]
+;[ManifestSkip]
+;[MetaYAML]
+;[License]
+;[Readme]
+;[ExtraTests]
+;[ExecDir]
+;[ShareDir]
+;[MakeMaker]
+;[Manifest]
+;[TestRelease]
+;[ConfirmRelease]
+;[UploadToCPAN]
+
+[VersionFromModule]
 [AutoPrereq]
 [PodWeaver]
-[GatherDir]
-[MetaYAML]
-[MakeMaker]
-[Manifest]
+[PkgVersion]
+[PodVersion]
+[ModuleBuild]
+[InstallGuide]
+[MetaJSON]
+[Signature]
+[CheckChangeLog]
 
+[EOLTests]
+[CriticTests]
+[NoTabsTests]
+[KwaliteeTests]
+[PodSyntaxTests]
+[PodCoverageTests]
 
