going nutso with dzil

--- a/dist.ini
+++ b/dist.ini
@@ -23,20 +23,33 @@ copyright_year   = 2010
 ;[UploadToCPAN]
 
 [VersionFromModule]
+[ChangelogFromGit]
 [AutoPrereq]
 [PodWeaver]
 [PkgVersion]
 [PodVersion]
+[PkgDist]
+[Bugtracker]
 [ModuleBuild]
 [InstallGuide]
 [MetaJSON]
 [Signature]
-[CheckChangeLog]
+;[CheckChangeLog]
+[Repository]
+[Homepage]
+[GithubMeta]
+[Git::Tag]
+;[VersionFromPrev]
+[MetaProvides::Package]
+[MetaData::BuiltWith]
 
 [EOLTests]
 [CriticTests]
 [NoTabsTests]
 [KwaliteeTests]
 [PodSyntaxTests]
+[CheckExtraTests]
+[UnusedVarsTests]
 [PodCoverageTests]
-
+[ReportVersions::Tiny]
+[ConsistentVersionTest]
