--- a/dist.ini
+++ b/dist.ini
@@ -5,25 +5,31 @@ copyright_holder = Stephen R. Scaffidi
 copyright_year   = 2010
 
 [@Git]
-[@Basic]
+;[@Basic]
 ;Currently equivalent to:
-;[GatherDir]
-;[PruneCruft]
-;[ManifestSkip]
-;[MetaYAML]
-;[License]
-;[Readme]
+[GatherDir]
+[PruneCruft]
+[ManifestSkip]
+[MetaYAML]
+[License]
+[Readme]
 ;[ExtraTests]
-;[ExecDir]
-;[ShareDir]
-;[MakeMaker]
-;[Manifest]
-;[TestRelease]
-;[ConfirmRelease]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[Manifest]
+[TestRelease]
+[ConfirmRelease]
 ;[UploadToCPAN]
 
 [VersionFromModule]
+
 [ChangelogFromGit]
+max_age    = 730
+file_name  = Changes
+tag_regexp = ^v\d+.*$
+
+
 [AutoPrereq]
 [PodWeaver]
 [PkgVersion]
@@ -33,7 +39,7 @@ copyright_year   = 2010
 [ModuleBuild]
 [InstallGuide]
 [MetaJSON]
-[Signature]
+;[Signature]
 ;[CheckChangeLog]
 [Repository]
 [Homepage]
@@ -42,9 +48,10 @@ copyright_year   = 2010
 ;[VersionFromPrev]
 [MetaProvides::Package]
 [MetaData::BuiltWith]
+[MinimumPerl]
 
 [EOLTests]
-[CriticTests]
+;[CriticTests]
 [NoTabsTests]
 [KwaliteeTests]
 [PodSyntaxTests]
