--- a/dist.ini
+++ b/dist.ini
@@ -23,11 +23,11 @@ copyright_year   = 2010
 ;[UploadToCPAN]
 
 [VersionFromModule]
-
-[ChangelogFromGit]
-max_age    = 730
-file_name  = Changes
-tag_regexp = ^v\d+.*$
+[NextRelease]
+;[ChangelogFromGit]
+;max_age    = 1000
+;file_name  = Changes
+;tag_regexp = ^v\d+.*$
 
 
 [AutoPrereq]
